# ll-win-client-aws

./: .gitignore  FINAL-TEST-RESULTS.md  LUCIDLINK-BUGS-FIXED.md  README.md  TEST-EXECUTION-RESULTS.md  TEST-SCRIPT-FIXES.md  ll-win-client-aws.py  pyproject.toml  test-deployment.sh  test-results-20251102-182249.md
deployment/: README.md  deploy-windows-client.sh  terraform-provisioner.tf
docs/: DEPLOYMENT-GUIDE.md  IAM-SETUP.md  TROUBLESHOOTING.md
iam/: QUICKSTART.md  README.md  cleanup.sh  ll-win-client-user-policy.json  main.tf  setup.sh  update-policy.sh
terraform/clients/: .gitattributes  ec2-client.tf  main.tf  outputs.tf  s3-userdata.tf  variables.tf
terraform/clients/templates/: minimal-userdata.ps1  windows-userdata.ps1
